--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -30,22 +30,21 @@
 						<span style="font-style: italic; font-size: 2em; font-family: Times New Roman; color: #0054a6;">i</span><span style="font-size: 2em; color: #0054a6;">Frame 2.0</span></span>
 					</div>
 					<div class="text-center mb-4">
-						<span style="font-size: 1em;">Please login to administrator account.</span>
+						<span style="font-size: 1em;">System administrators-only Login</span>
 					</div>
 					<form id="loginForm" name="loginForm" method="post" action="/auth/adamsLogin" autocomplete="off" onsubmit="return false;">
 						<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
 						<div class="form-floating mb-2">
-							<select class="form-select" id="csNo" style="padding: 3px">
-								<option value="">- TENANT LIST -</option>
-							</select>
+							<select class="form-select" id="csNo" style="padding-left: 15px"></select>
+							<label for="csNo">Please change this option if you need to check.</label>
 						</div>
 						<div class="form-floating mb-2">
-							<input type="email" class="form-control" id="inpUsrId" name="inpUsrId" minLength="8" maxLength="50" placeholder="your@email.com" autocomplete="off" required>
-							<label for="inpUsrId">Administrator account</label>
+							<input type="email" class="form-control" id="inpUsrId" name="inpUsrId" minLength="8" maxLength="50" placeholder="Administrator ID" autocomplete="off" required>
+							<label for="inpUsrId">Administrator ID</label>
 						</div>
 						<div class="form-floating">
-							<input type="password" class="form-control" id="inpUsrPassword" name="inpUsrPassword" minLength="6" maxLength="20" placeholder="your password" autocomplete="off" required>
-							<label for="inpUsrPassword">Administrator password</label>
+							<input type="password" class="form-control" id="inpUsrPassword" name="inpUsrPassword" minLength="6" maxLength="20" placeholder="Administrator Password" autocomplete="off" required>
+							<label for="inpUsrPassword">Administrator Password</label>
 						</div>
 						<div class="form-footer">
 							<button type="submit" class="btn btn-primary w-100" id="signIn">Sign in</button>
@@ -67,7 +66,7 @@
 			</div>
 			<div class="col-lg-6 col-xl-8 d-none d-lg-block">
 				<!-- Main Image -->
-				<div class="bg-cover h-100 min-vh-100" style="background-image: url(images/main_image.jpg)"></div>
+				<div class="bg-cover h-100 min-vh-100" style="background-image: url(images/main_image_admin.jpg)"></div>
 			</div>
 		</div>
 		<form id="form" name="form" method="post" action="/menuLink">
@@ -95,7 +94,7 @@
 				var vUsrPassword = $("#inpUsrPassword").val();
 				
 				if ( isNull(vCsNo) == "" ) {
-		            alert("Choose TENANT LIST.");
+		            alert("Choose a company.");
 		            $("#csNo").focus();
 		    		return false;
 		    	}
@@ -142,6 +141,8 @@
 						
 						if ( sMsg != null && sMsg != undefined && sMsg != "" ) {
 							alert(sMsg);
+							$("#inpUsrId").focus();
+							return false;
 						}
 						
 						if (sCode == "200") {
@@ -183,7 +184,11 @@
 					success: function (data) {
 						var csNoList = data.resultVO;
 						for (var cnt = 0; cnt < csNoList.length; cnt++) {
-							$("#csNo").append("<option value=\"" + csNoList[cnt].csNo + "\">" + csNoList[cnt].compNm + "</option>");
+							if (csNoList[cnt].csNo == "999") {
+								$("#csNo").append("<option selected value=\"" + csNoList[cnt].csNo + "\">" + csNoList[cnt].compNm + "</option>");
+							} else {
+								$("#csNo").append("<option value=\"" + csNoList[cnt].csNo + "\">" + csNoList[cnt].compNm + "</option>");
+							}
 						}
 					},
 					error: function (xhr, status, error) {
