--- a/src/main/resources/templates/views/user/myPage.html
+++ b/src/main/resources/templates/views/user/myPage.html
@@ -6,12 +6,10 @@
 				<h2>My Activities</h2>
 				<div class="ptag-container mb-2">
 					<span>Today is the</span> 
-					<span id="accuDate" class="text-primary"><b>
-					</b></span>
+					<span id="accuDate" class="text-primary fs-3"></span>
 					<span>day since you subscribed to iFrame2.0.</span>
 				</div>
 			</div>
-
 
 			<div class="container-xl mb-6">
 				<div class="col-12">
@@ -22,52 +20,52 @@
 								<div class="ribbon ribbon-top bg-primary">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-login-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 8v-2a2 2 0 0 1 2 -2h7a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-7a2 2 0 0 1 -2 -2v-2" /><path d="M3 12h13l-3 -3" /><path d="M13 15l3 -3" /></svg>
 								</div>
-								<div class="card-status-start bg-primary"></div>
+
 								<div class="card-body ms-3 me-3">
 									<div class="col align-items-center mb-3">
 										<span>
 											Last login time :
 										</span>
-										<span id="lastLoginDtm" class="text-primary"><b>
-										</b></span>
+										<span id="lastLoginDtm" class="text-primary fs-3"></span>
 									</div>
 									<div class="col align-items-center mb-5">
 										<span>
 											You've logged in 
 										</span>
-										<span id="loginCntTotal" class="text-primary"><b>
-										</b></span>
+										<span id="loginCntTotal" class="text-primary fs-3"></span>
 										<span>
 											times so far.
 										</span>
 									</div>
 									
 									<div id="chart-01" class="chart-sm"></div>
-									
+
+									<div class="col align-items-center mt-2">
+										<span class="fs-5">Login trends in the last 30 days</span>
+									</div>
+																		
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-12 col-lg-4">
 							<div class="card card-sm">
-								<div class="ribbon ribbon-top bg-primary">
+								<div class="ribbon ribbon-top bg-success">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-upload"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" /><path d="M7 9l5 -5l5 5" /><path d="M12 4l0 12" /></svg>
 								</div>
-								<div class="card-status-start bg-primary"></div>
+
 								<div class="card-body ms-3 me-3">
 									<div class="col align-items-center mb-3">
 										<span>
 											Last upload time :
 										</span>
-										<span id="lastUploadDtm" class="text-primary"><b>
-										</b></span>
+										<span id="lastUploadDtm" class="text-success fs-3"></span>
 									</div>
 									<div class="col align-items-center mb-5">
 										<span>
 											You've uploaded 
 										</span>
-										<span id="uploadCntTotal" class="text-primary"><b>
-										</b></span>
+										<span id="uploadCntTotal" class="text-success fs-3"></span>
 										<span>
 											times so far.
 										</span>
@@ -75,6 +73,10 @@
 									
 									<div id="chart-02" class="chart-sm"></div>
 									
+									<div class="col align-items-center mt-2">
+										<span class="fs-5">Upload trends in the last 30 days</span>
+									</div>
+									
 								</div>
 							</div>
 						</div>
@@ -82,30 +84,32 @@
 
 						<div class="col-sm-12 col-lg-4">
 							<div class="card card-sm">
-								<div class="ribbon ribbon-top bg-primary">
+								<div class="ribbon ribbon-top bg-warning">
 									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-settings"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /></svg>
 								</div>
-								<div class="card-status-start bg-primary"></div>
+
 								<div class="card-body ms-3 me-3">
 									<div class="col align-items-center mb-3">
 										<span>
 											Last run time :
 										</span>
-										<span id="lastBatDtm" class="text-primary"><b>
-										</b></span>
+										<span id="lastBatDtm" class="text-warning fs-3"></span>
 									</div>
 									<div class="col align-items-center mb-5">
 										<span>
 											You've run 
 										</span>
-										<span id="batCntTotal" class="text-primary"><b>
-										</b></span>
+										<span id="batCntTotal" class="text-warning fs-3"></span>
 										<span>
 											times so far.
 										</span>
 									</div>
 									
 									<div id="chart-03" class="chart-sm"></div>
+
+									<div class="col align-items-center mt-2">
+										<span class="fs-5">Run trends in the last 30 days</span>
+									</div>
 									
 								</div>
 							</div>
@@ -129,7 +133,7 @@
 						<div class="row">
 							<div class="col-md-4">
 								<div class="form-floating mb-2">
-									<input type="text" class="form-control" id="managerName" name="managerName" maxLength="50" placeholder="your name" autocomplete="off" required>
+									<input type="text" th:value="${loginDTO.usrNm}" class="form-control" id="managerName" name="managerName" maxLength="50" placeholder="your name" autocomplete="off" disabled>
 									<label for="managerName">your name</label>
 								</div>
 							</div>
@@ -141,7 +145,7 @@
 							</div>
 							<div class="col-md-4">
 								<div class="form-floating mb-2">
-									<input type="text" class="form-control" id="managerPhone" name="managerPhone" maxLength="30" placeholder="ditect phone number (without -)" autocomplete="off" required>
+									<input type="text" th:value="${loginDTO.usrPhNo}" class="form-control" id="managerPhone" name="managerPhone" maxLength="30" placeholder="ditect phone number (without -)" autocomplete="off" required>
 									<label for="managerPhone">direct phone number (without -)</label>
 								</div>
 							</div>
@@ -150,8 +154,8 @@
 						<div class="row">
 							<div class="col-md-4">
 								<div class="form-floating mb-2">
-									<input type="email" class="form-control" id="managerEmail" name="managerEmail" minLength="8" maxLength="50" placeholder="your@email.com" autocomplete="off" required>
-									<label for="managerEmail">your@email.com (it'll be your ID)</label>
+									<input type="email" th:value="${loginDTO.usrId}" class="form-control" id="managerEmail" name="managerEmail" minLength="8" maxLength="50" placeholder="your@email.com" autocomplete="off" disabled>
+									<label for="managerEmail">your@email.com</label>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -173,7 +177,7 @@
 							</div>
 							<div class="col-md-4">
 								<div class="form-footer">
-									<button type="submit" class="btn btn-primary w-100" onclick="submitCompanyInfo()">Submit</button>
+									<button id="updateButton" class="btn btn-secondary w-100" onclick="updateMyAccount()">Update</button>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -193,9 +197,9 @@
 				window.ApexCharts && (new ApexCharts(document.getElementById('chart-01'), {
 					chart: {
 						id: "chartId-01",
-						type: "bar",
+						type: "area",
 						fontFamily: 'inherit',
-						height: 80.0,
+						height: 60.0,
 						sparkline: {
 							enabled: true
 						},
@@ -203,16 +207,17 @@
 							enabled: false
 						},
 					},
-					plotOptions: {
-						bar: {
-							columnWidth: '50%',
-						}
-					},
 					dataLabels: {
 						enabled: false,
 					},
 					fill: {
-						opacity: 1,
+						opacity: .16,
+						type: 'solid'
+					},
+					stroke: {
+		      			width: 3,
+		      			lineCap: "round",
+		      			curve: "smooth",
 					},
 					series: [{
 						name: "count",
@@ -241,9 +246,8 @@
 							padding: 4
 						},
 					},
-					labels: [
-					],
-					colors: [tabler.getColor("secondary")],
+					labels: [],
+					colors: [tabler.getColor("primary")],
 					legend: {
 						show: false,
 					},
@@ -259,9 +263,9 @@
 				window.ApexCharts && (new ApexCharts(document.getElementById('chart-02'), {
 					chart: {
 						id: "chartId-02",
-						type: "bar",
+						type: "area",
 						fontFamily: 'inherit',
-						height: 80.0,
+						height: 60.0,
 						sparkline: {
 							enabled: true
 						},
@@ -269,20 +273,21 @@
 							enabled: false
 						},
 					},
-					plotOptions: {
-						bar: {
-							columnWidth: '50%',
-						}
-					},
 					dataLabels: {
 						enabled: false,
 					},
 					fill: {
-						opacity: 1,
+						opacity: .16,
+						type: 'solid'
+					},
+					stroke: {
+		      			width: 3,
+		      			lineCap: "round",
+		      			curve: "smooth",
 					},
 					series: [{
 						name: "count",
-						data: [37, 35, 44, 28, 36, 24, 65, 31, 37, 39, 62, 51, 35, 41, 35, 27, 93, 53, 61, 27, 54, 43, 19, 46, 39, 62, 51, 35, 41, 67]
+						data: []
 					}],
 					tooltip: {
 						theme: 'dark'
@@ -307,10 +312,8 @@
 							padding: 4
 						},
 					},
-					labels: [
-						'2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20'
-					],
-					colors: [tabler.getColor("secondary")],
+					labels: [],
+					colors: [tabler.getColor("success")],
 					legend: {
 						show: false,
 					},
@@ -325,9 +328,9 @@
 				window.ApexCharts && (new ApexCharts(document.getElementById('chart-03'), {
 					chart: {
 						id: "chartId-03",
-						type: "bar",
+						type: "area",
 						fontFamily: 'inherit',
-						height: 80.0,
+						height: 60.0,
 						sparkline: {
 							enabled: true
 						},
@@ -335,20 +338,21 @@
 							enabled: false
 						},
 					},
-					plotOptions: {
-						bar: {
-							columnWidth: '50%',
-						}
-					},
 					dataLabels: {
 						enabled: false,
 					},
 					fill: {
-						opacity: 1,
+						opacity: .16,
+						type: 'solid'
+					},
+					stroke: {
+		      			width: 3,
+		      			lineCap: "round",
+		      			curve: "smooth",
 					},
 					series: [{
 						name: "count",
-						data: [17, 35, 23, 28, 8, 24, 65, 31, 62, 39, 62, 51, 35, 41, 35, 27, 113, 53, 61, 27, 31, 13, 19, 46, 12, 62, 3, 35, 41, 67]
+						data: []
 					}],
 					tooltip: {
 						theme: 'dark'
@@ -373,10 +377,8 @@
 							padding: 4
 						},
 					},
-					labels: [
-						'2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20'
-					],
-					colors: [tabler.getColor("secondary")],
+					labels: [],
+					colors: [tabler.getColor("warning")],
 					legend: {
 						show: false,
 					},
@@ -409,7 +411,7 @@
 			
 			function main() {
 				// 그리드 초기화 및 데이터 로드
-				console.log("Initializing SlickGrid...");
+				console.log("Initializing myPage...");
 				
 				// 그래프 초기화 및 데이터 로드 - ajax 공통 함수
 				getAdamsRegDtmTotal((input = JSON.stringify({usrId: ""})));
@@ -486,21 +488,29 @@
 
 				gf_Transaction(option, fn_callback);
 			}
-			
+
+			function Cardinal2Ordinal(n)
+			{
+			    n = parseInt(n, 10);
+			    const suffix = ['th', 'st', 'nd', 'rd'];
+			    const mod100 = n % 100;
+			    return n+(suffix[(mod100-20)%10] || suffix[mod100] || suffix[0]);
+			}
+
 			function fn_regDtmTotal(data) {
 				
 				if (data && data.regDtmTotal > 0){
 					let regDtmTotal = data.regDtmTotal;
 					
 					if(regDtmTotal > 0){
-						$("#accuDate").text(regDtmTotal.toLocaleString()).css("font-weight", "bold");
+						$("#accuDate").text(Cardinal2Ordinal(regDtmTotal).toLocaleString()).css("font-weight", "bold");
 					}else {
 						// No subscription info found
-						$("#accuDate").text("1").css("font-weight", "bold"); // accuDate 초기값은 1
+						$("#accuDate").text("1st").css("font-weight", "bold"); // accuDate 초기값은 1
 					}
 				}else if (data && data.regDtmTotal === 0) {
                     // No subscription info found
-                    $("#accuDate").text("1").css("font-weight", "bold");
+                    $("#accuDate").text("1st").css("font-weight", "bold");
                 }
 			}
 			
@@ -840,6 +850,87 @@
 					console.error("Invalid month batch count graph");
                 }
 			}
+
+			
+	
+
+
+
+		    function updateMyAccount() {
+		        
+		    	var vPtbNm        = $("#managerName").val();
+		    	var vPtbDeptNm    = $("#managerTeam").val();
+		    	var vPtbPhNo      = $("#managerPhone").val();
+		    	var vPtbEmail     = $("#managerEmail").val();
+		    	var vUsrPassword  = $("#usrPassword").val();
+		    	var vUsrPasswordAgain  = $("#usrPasswordAgain").val();
+		    	
+	    	
+		    	if ( isNull(vPtbDeptNm) == "" ) {
+		            alert("Enter your team name.");
+		            $("#managerTeam").focus();
+		    		return;
+		    	}
+		    	
+		    	if ( isNull(vPtbPhNo) == "" ) {
+		            alert("Enter your phone number.");
+		            $("#managerPhone").focus();
+		    		return;
+		    	}
+
+		    	if ( isNull(vUsrPassword) == "" ) {
+		            alert("Enter your password.");
+		            $("#usrPassword").focus();
+		    		return;
+		    	}
+
+		    	if ( isNull(vUsrPasswordAgain) == "" ) {
+		            alert("Re-enter your password.");
+		            $("#usrPasswordAgain").focus();
+		    		return;
+		    	}
+		    	
+		    	if ( vUsrPassword != vUsrPasswordAgain ) {
+		            alert("The two inputs for your password do not match. Please enter it again.");
+		            $("#usrPasswordAgain").focus();
+		    		return;
+		    	}
+		    	
+	    	
+		    	const myAccountData = {
+		            ptbNm       : vPtbNm
+		            , ptbDeptNm   : vPtbDeptNm
+		            , ptbPhNo     : vPtbPhNo
+		            , ptbEmail    : vPtbEmail
+		            , usrPassword : vUsrPassword
+		        };
+
+				$.ajax({
+					type: "POST",
+					url: "/", // API 엔드포인트 주소
+					contentType: "application/json; charset=utf-8",
+					data: JSON.stringify(myAccountData), // JSON 문자열로 변환
+					dataType: "json",
+					success: function (data) {
+						console.log("Response data: ", data);
+						// 성공 응답 처리
+						if (data.resultCode === "200") {
+							alert("Your update request has been applied successfully.");
+							// 추가 작업 필요 시 여기에 작성
+						} else {
+							alert("Failed to save your account information.");
+						}
+					},
+					error: function (xhr, status, error) {
+						// 오류 처리
+
+						console.error("Error occurred: ", status, error);
+						alert("An error occurred while updating the data.");
+					}
+				});
+
+		    }			
+
 		</script>
 	</th:block>
 </html>
