--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,13 @@
 		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>
 		<script src="js/jquery-3.7.1.min.js"></script>
     	<script src="js/utils.js"></script>
+    	<script>
+    		window.addEventListener('pageshow', function(event) {
+				if (event.persisted) {
+					location.reload(true);
+				}
+			});
+    	</script>
 		<style>
 			@import url('css/inter.css');
 			:root {
