--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -50,7 +50,7 @@
 								</div>
 								<div class="col-auto me-0 p-1"></div>
 								<div class="col-auto m-0">
-									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px"> Save changes </a>
+									<a href="#" class="btn btn-primary ms-auto" style="padding: 4px 10px; color: white; font-size: 13px"> Save changes </a>
 								</div>
 							</div>
 						</div>
@@ -606,10 +606,12 @@
 						if (confirm("Do you want to register?") == true) {
 							console.log("등록테스트");
 							insertList(JSON.stringify(formData));
+							// 등록 성공 후 모달 숨기기
+							modalElement.hide();
 						}
 					} else {
 						alert("Please fill out all required fields.");
-					return;
+					return false;
 					}
 				} else if (modalType === "edit") {
 					console.log("EDIT 테스트");
