footer popup: added

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -124,6 +124,18 @@
 				align-items: center;
 			}
 
+			.privacy-policy-link {
+				text-decoration: none;
+				cursor: pointer;
+				transition: color 0.3s ease;
+			}
+			.privacy-policy-link:hover {
+				color: #007bff !important; /* Change this to your preferred hover color */
+				text-decoration: underline;
+			}
+
+			
+
 		</style>
 		<!-- litepicker library for making a datepicker -->
 		<script>
