.form-control font-size 조정

--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -183,6 +183,9 @@ a.nav-link.active {
   padding: 10px;
   font-size: 13px;
 }
+.form-control{
+  font-size: 13px;
+}
 
 .list-unstyled li {
   margin-bottom: 10px;
