--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -187,7 +187,7 @@
 		var data;
 		var unqId = "rowNumber";
 		var xcpt_cols = [unqId, "frstRegEmpNo", "frstRegDtm"];
-		var check_cols = ["inscDvCd", "valuMetdCd", "lvl1Cd", "lvl3Cd", "lvl3Cd"];
+		var check_cols = ["inscDvCd", "valuMetdCd", "lvl1Cd", "lvl3Cd", "lvl3Cd", "drAcSubjCd", "crAcSubjCd", "useYn"];
 		
 		var lvl1CdList  = { E    :"Expected"
 				          , A    :"Actual" };
