--- a/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
@@ -226,136 +226,131 @@
 			}
 		};
 		
-        function main() {
-            // 그리드 초기화 및 데이터 로드
-            console.log("Initializing SlickGrid...");
-            var inputStdYymm = getStdYymm();
-            getList(
-                        (input = JSON.stringify({ 
-                                                  stdYymm: inputStdYymm
-                        }))
-                   );
-        }
+		function main() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			var inputStdYymm = getStdYymm();
+			getList(
+						(input = JSON.stringify({ 
+												  stdYymm: inputStdYymm
+						}))
+					);
+		}
 
-        function getSearch() {
-            // 그리드 초기화 및 데이터 로드
-            console.log("Initializing SlickGrid...");
-            var inputStdYymm = getStdYymm();
-            
+		function getSearch() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			var inputStdYymm = getStdYymm();
+			
 			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "") {
 				alert("Please select a year, month!");
-				return;
+			return;
 			} else if ($("#inputYear").val() === "") {
 				alert("Please select a year to continue!");
-				return;
+			return;
 			} else if ($("#inputMonth").val() === "") {
 				alert("Please select a month to continue!");
-				return;
+			return;
 			} 
 			
 			const element = document.getElementById("divMyGrid");
 			element.innerHTML = "";
 			
-            getList(
-                        (input = JSON.stringify({ 
-                                                  stdYymm: inputStdYymm
-                        }))
-                   );
-        }    
+			getList(
+						(input = JSON.stringify({ 
+												  stdYymm: inputStdYymm
+						}))
+					);
+		}
 
 		/**
 		 * Transaction callback 함수
 		 **/
 		function fn_callback(result){
-		   console.log("fn_callback : " + result.id);
-			 if( result.resultCd == "S" ){
+			console.log("fn_callback : " + result.id);
+			if( result.resultCd == "S" ){
 					
-				 switch (result.id){
-					 case "SelectList" :
-						 
-						 fn_setGrid(result.data);
-						 
-					 break;
-					 case "ExecuteList" :
-						 console.log("executeList case");
-						 alert("Successfully Calculated!");
-						 main();
-					 break;
-				 }	  
-			 } else if( result.resultCd == "E") {
-				 
+				switch (result.id){
+					case "SelectList" :
+						
+						fn_setGrid(result.data);
+						break;
+					case "ExecuteList" :
+						console.log("executeList case");
+						alert("Successfully Calculated!");
+						main();
+						break;
+				}
+			} else if( result.resultCd == "E") {
 			} else {
 				 console.log("fn_callback result : ", result);
-			  }
-		 }
+			}
+		}
 
-		   function fn_setGrid(data){
+		function fn_setGrid(data){
+
+			dataView = new Slick.Data.DataView( { idField: unqId });
+			grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
 				
-				dataView = new Slick.Data.DataView( { idField: unqId });
-				grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
+			// Make the grid respond to DataView change events.
+			dataView.onRowCountChanged.subscribe(function (e, args) {
+				grid.updateRowCount();
+				grid.render();
+			});
 				
-				// Make the grid respond to DataView change events.
-				dataView.onRowCountChanged.subscribe(function (e, args) {
-					grid.updateRowCount();
-					grid.render();
-				});
-				
-				dataView.onRowsChanged.subscribe(function (e, args) {
-					grid.invalidate();
-					grid.render();
+			dataView.onRowsChanged.subscribe(function (e, args) {
+				grid.invalidate();
+				grid.render();
 			});
 					
 			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
 			dataView.setItems(data, unqId);
-			
+				
 			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
 			grid.onBeforeSort.subscribe(function (e, args) {
-				return true;
+			return true;
 			});				   
-		  
 	
-		   // 정렬
-		   grid.onSort.subscribe(function (e, args) {
-			 var cols = args.sortCols;
+			// 정렬
+			grid.onSort.subscribe(function (e, args) {
+				var cols = args.sortCols;
 	
-			 data.sort(function (dataRow1, dataRow2) {
-			   for (var i = 0, l = cols.length; i < l; i++) {
-					var field  = cols[i].sortCol.field;
-					var sign   = cols[i].sortAsc ? 1 : -1;
-					var value1 = dataRow1[field],
-						value2 = dataRow2[field];
-					var result =
-				   (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-				 if (result != 0) {
-				   return result;
-				 }
-			   }
-			  return 0;
-			 });
+				data.sort(function (dataRow1, dataRow2) {
+					for (var i = 0, l = cols.length; i < l; i++) {
+						var field  = cols[i].sortCol.field;
+						var sign   = cols[i].sortAsc ? 1 : -1;
+						var value1 = dataRow1[field], value2 = dataRow2[field];
+						var result = (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+						if (result != 0) {
+						return result;
+						}
+					}
+				return 0;
+				});
 	
-			grid.render();
-		  });
+				grid.render();
+			});
 	
-		  grid.setSelectionModel(new Slick.CellSelectionModel());
-		  grid.registerPlugin(new Slick.AutoTooltips());
+			grid.setSelectionModel(new Slick.CellSelectionModel());
+			grid.registerPlugin(new Slick.AutoTooltips());
 	
-		  // set keyboard focus on the grid
-		  //grid.getCanvasNode().focus();
-		  grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+			// set keyboard focus on the grid
+			//grid.getCanvasNode().focus();
+			grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 	
-		  grid.onAddNewRow.subscribe(function (e, args) {
-			  var newItem = args.item;
-			  var column = args.column;
-			  dataView.beginUpdate();
-			  dataView.setItems(data);
-			  dataView.endUpdate();
-			  grid.updateRowCount();
-			  grid.render();
-		  });
+			grid.onAddNewRow.subscribe(function (e, args) {
+				var newItem = args.item;
+				var column = args.column;
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
 	
-		  grid.onBeforeEditCell.subscribe(function (e, args) {
-			console.log("onBeforeEditCell");
-		  });
+			grid.onBeforeEditCell.subscribe(function (e, args) {
+				console.log("onBeforeEditCell");
+			});
 	
 			grid.onCellChange.subscribe(function (e, args) {
 				dataView.beginUpdate();
@@ -365,31 +360,28 @@
 				grid.render();
 			});
 	
-		  grid.onValidationError.subscribe(function (e, args) {
-			// handle validation errors originating from the CompositeEditor
-			if (args.validationResults) {
-			  let errorMsg = args.validationResults.msg || "";
-			  if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-				if (args.validationResults.errors) {
-				  errorMsg += "\n";
-				  args.validationResults.errors.forEach(function (
-					error,
-					errorIndex
-				  ) {
-					const columnName = error.editor.args.column.id;
-					errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-				  });
+			grid.onValidationError.subscribe(function (e, args) {
+				// handle validation errors originating from the CompositeEditor
+				if (args.validationResults) {
+					let errorMsg = args.validationResults.msg || "";
+					if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+						if (args.validationResults.errors) {
+							errorMsg += "\n";
+							args.validationResults.errors.forEach(function (error, errorIndex) {
+								const columnName = error.editor.args.column.id;
+								errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+							});
+						}
+						console.log(errorMsg);
+					}
+				} else {
+					alert(errorMessages);
 				}
-				console.log(errorMsg);
-			  }
-			} else {
-			  alert(errorMessages);
-			}
-		  });
+			});
 	
-		  grid.setActiveCell(0, 0);
-		  console.log("SlickGrid initialized.");
-		  }	 
+			grid.setActiveCell(0, 0);
+			console.log("SlickGrid initialized.");
+		}
 
 		// Download Excel functionality
 		document.getElementById('downloadExcel').addEventListener('click', function() {
