--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<html
-  lang="ko"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{layout/layout}"
->
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 	<th:block layout:fragment="content">
 		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 		<div class="page-wrapper" id="page-wrapper">
@@ -188,10 +183,10 @@
 				enableAutoSizeColumns: true,
 				editable: false, // grid도 편집가능.. grid 편집 기능 제거 필요..
 				enableAddRow: true,
-	  			asyncEditorLoading: false,
-	   			autoEdit: false,
-	 			autoEditNewRow: false,
-	 			rowHeight: 35,
+				asyncEditorLoading: false,
+				autoEdit: false,
+				autoEditNewRow: false,
+				rowHeight: 35,
 			};
 	
 		var newRowIds = 0;
@@ -370,17 +365,17 @@
 
 			//grid.setActiveCell(0, 0);
 			console.log("SlickGrid initialized.");
-			}
+		}
 
-			// Download Excel functionality
-			document.getElementById("downloadExcel").addEventListener("click", function () {
-				const currDate = getCurrentDateTime();
-				const fileName = "WRKBAT003_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-				const sheetName = "배치결과"; // 시트 이름
-				const gridColumns = columns; // SlickGrid의 컬럼 배열
-				const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-				exportToExcel(fileName, sheetName, gridColumns, gridData);
-			});
+		// Download Excel functionality
+		document.getElementById("downloadExcel").addEventListener("click", function () {
+			const currDate = getCurrentDateTime();
+			const fileName = "WRKBAT003_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = "배치결과"; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
 		</script>
 	</th:block>
 </html>
